release: v1.0.4 - server-authoritative opening, safer networking, crash fixes
Major changes:
- Server-authoritative box opening: server decides results and sends to client
- New networking: request-id matching, bounded pending queues, safe rejections
- Improved animation: meaningful scroll distance, winning items in late window
- Crash fixes: wrong-thread GUI, null font, empty result paths
- JSON tutorial: auto-generated _tutorial section for new config files
- Code restructuring: moved box classes from api/box to box package
- Removed KubeJS support classes
- Updated GUI screens, localization (en/zh)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>